# schedule

./: .gitignore  Dockerfile  README.md  import.py  pyproject.toml
app/: import.py  local_import.py  my_input.py
app/bstu/: bstu.py
app/etu/: etu.py
app/models/: group.py  lesson.py  subject.py  teacher.py  unversity_template.py
app/services/: decorators.py  helper.py  requests.py
app/spbstu/: config.py  spbstu.py
app/universities/: __init__.py  university.py
app/universities/bstu/: bstu.py
app/universities/etu/: etu.py
app/universities/itmo/: __init__.py  config.py  itmo.py
app/universities/spbstu/: __init__.py  spbstu.py
app/unversities/: __init__.py  university.py
app/unversities/bstu/: __init__.py  bstu.py  config.py
app/unversities/etu/: __init__.py  config.py  etu.py
app/unversities/itmo/: itmo.py
app/unversities/spbstu/: config.py  spbstu.py
app/unversities/unecon/: __init__.py  config.py
models/: group.py  lesson.py  unversity_tamplate.py  unversity_template.py
services/: exceptions.py
spbstu/: spbstu.py
