[tool.poetry]
name = "schedule"
version = "0.1.0"
description = ""
authors = ["Dmitrii Korshun <korshun.dimas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
bs4 = "^0.0.1"
lxml = "^4.6.3"
pandas = "^1.3.0"
SQLAlchemy = "^1.4.20"
PyMySQL = "^1.0.2"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
