[tool.poetry]
name = "schedule"
version = "0.1.0"
description = ""
authors = ["Dmitrii Korshun <korshun.dimas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
bs4 = "^0.0.1"
lxml = "^4.6.3"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
